# glesy

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: ProjectConfigs.cmake  ProjectOptions.cmake
cmake/modules/: AddEgl.cmake  AddGlfw.cmake  AddPng.cmake  AddX11.cmake
config/: GlesyConfig.cmake.in
dep/glad/: CMakeLists.txt
dep/glad/include/glad/: egl.h  gl.h
examples/: CMakeLists.txt
examples/example01/: CMakeLists.txt
examples/example01/src/: example01.cpp
examples/example02/: CMakeLists.txt
examples/example02/src/: example02.cpp
examples/example03/src/: example03.cpp
examples/example04/src/: example04.cpp
examples/example05/src/: example05.cpp
include/glesy/: Api.h  Context.hpp  Glesy.hpp  NativeWindow.hpp  Platform.hpp  Utils.hpp
include/glesy/X11/: NativeDisplay.hpp  Window.hpp
lib/: CMakeLists.txt
lib/include/glesy/: IDisplay.hpp  IWindow.hpp  Shader.hpp  Texture.hpp  Utils.hpp
lib/include/glesy/X11/: NativeWindow.hpp
lib/src/: Shader.cpp  Texture.cpp  Utils.cpp
src/: CMakeLists.txt  Context.cpp  ContextImpl.cpp  ContextImpl.hpp  Platform.cpp  Utils.cpp
src/X11/: NativeDisplay.cpp  NativeWindow.cpp  Window.cpp
src/example01/src/: example01.cpp
src/example02/src/: example02.cpp
src/example03/: CMakeLists.txt
src/example03/src/: example03.cpp
src/example04/: CMakeLists.txt
src/example04/src/: example04.cpp
src/example05/: CMakeLists.txt
src/example05/src/: example05.cpp
src/example06/: CMakeLists.txt
src/example06/src/: example06.cpp
